add profile edit for admins

--- a/src/res/i18n/en.json
+++ b/src/res/i18n/en.json
@@ -26,5 +26,11 @@
     "messages": "Messages",
     "notifications": "Notifications",
     "search": "Search..."
+  },
+  "admin": {
+    "profiles": {
+      "label": "User profiles",
+      "load": "User profiles loading..."
+    }
   }
 }
