add profile edit for admins - fix

--- a/src/res/i18n/en.json
+++ b/src/res/i18n/en.json
@@ -29,6 +29,7 @@
   },
   "admin": {
     "profiles": {
+      "title": "Edit user profiles",
       "label": "User profiles",
       "load": "User profiles loading..."
     }
