fix props to react.fc

--- a/src/res/i18n/en.json
+++ b/src/res/i18n/en.json
@@ -105,5 +105,14 @@
   },
   "amount": {
     "title": "Amount"
+  },
+  "product": {
+    "info": {
+      "tabs": {
+        "description": "Description",
+        "characteristics": "Characteristics",
+        "review": "Review"
+      }
+    }
   }
 }
